Fixed footer issues on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,15 @@
 body {
     margin: 0 auto;
     width: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
 }
 
 footer {
-    bottom: 1.25rem;
-    margin-top: 1.25rem;
-    position:fixed;
+    margin: 1.25rem 0;
     width: 95%;
 }
 
